fixed card align issues

--- a/public/css/output.css
+++ b/public/css/output.css
@@ -472,8 +472,17 @@
   .mx-auto {
     margin-inline: auto;
   }
+  .-mt-5 {
+    margin-top: calc(var(--spacing) * -5);
+  }
   .-mt-10 {
     margin-top: calc(var(--spacing) * -10);
+  }
+  .-mt-12 {
+    margin-top: calc(var(--spacing) * -12);
+  }
+  .-mt-15 {
+    margin-top: calc(var(--spacing) * -15);
   }
   .mt-1 {
     margin-top: calc(var(--spacing) * 1);
@@ -540,6 +549,9 @@
   }
   .-ml-15 {
     margin-left: calc(var(--spacing) * -15);
+  }
+  .-ml-17 {
+    margin-left: calc(var(--spacing) * -17);
   }
   .ml-1 {
     margin-left: calc(var(--spacing) * 1);
